[project]
name = "weather"
version = "0.1.0"
description = ""
authors = [
    {name = "YaelWeisman",email = "yael27117596@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit (>=1.47.0,<2.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "datetime (>=5.5,<6.0)",
    "streamlit-js-eval (>=0.1.7,<0.2.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "plotly (>=6.2.0,<7.0.0)"
]
[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
